# omnisafe

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Installation.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  conda-recipe.yaml  conftest.py  install.sh  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  questions.yml  questions_help_support.md
.github/workflows/: ci.yml  lint.yml  test.yml
benchmarks/: README.md
benchmarks/model-based/: README.md
benchmarks/off-policy/: README.md
benchmarks/offline/: README.md
benchmarks/on-policy/: README.md
docs/: requirements.txt
docs/source/: conf.py  index.rst  make.bat  requirements.txt  spelling_wordlist.txt
docs/source/BaseRL/: MDP.rst  NPG.rst  PG.rst  PPO.rst  TRPO.rst  mdp_docs.rst  npg_docs.rst  pg_docs.rst  ppo_docs.rst  trpo_docs.rst
docs/source/Documentation/: Installation.md  Installation.rst  Introduction.md  Introduction.rst
docs/source/Foundations/: notations.rst  pre_know.rst
docs/source/MISC/: Changelog.md
docs/source/OmniSafe/: first_order.rst  lagrange.rst  logger.rst  multi-processing.rst  multi_process.rst  on_policy.rst  run-utils.rst  second_order.rst  visualization.rst
docs/source/SafeRL/: CPO.rst  FOCOPS.rst  Lag.rst  PCPO.rst  RCPO.rst  cpo_docs.rst  focops_docs.rst  lag.rst  pcpo_docs.rst  rcpo_docs.rst
docs/source/Start/: Installation.rst  usage.rst
docs/source/algorithms/: on_policy.rst
docs/source/baserl/: ppo.rst  trpo.rst
docs/source/baserlapi/: model_based.rst  off_policy.rst  on_policy.rst
docs/source/benchmark/: case-study.md  modelbased.md  off-policy.md  offline.md  on-policy.md
docs/source/common/: buffer.rst  exp_grid.rst  lagrange.rst  logger.rst  normalizer.rst  offline_data.rst  simmer_agent.rst  stastics_tool.rst
docs/source/envs/: adapter.rst  core.rst  custom.rst  discrete_env.rst  mujoco_env.rst  wrapper.rst  (+1 more)
envs/safety-gymnasium/: .pre-commit-config.yaml  README.md  setup.py
examples/: analize_experiment_results.py  analyze_experiment_results.py  collect_offline_data.py  eval.py  evaluate_saved_policy.py  plot.py  test.py  test_env.py  train.py  train_eval_diffuser.py  train_from_custom_dict.py  train_from_custom_env.py  train_from_yaml.py  train_model_based.py  train_on_policy.py  train_policy.py  vis_safety_gymnasium.py
examples/benchmarks/: example_cli_benchmark_config.yaml  run_experiment_grid.py  run_offline_benchmark.py
examples/scripts/: cpo.sh  focops.sh  pcpo.sh  ppo.sh  ppol.sh  train_cpo.sh  trpo.sh  trpol.sh
omnisafe/: __init__.py  algo_wrapper.py  evaluator.py  typing.py  version.py
omnisafe/adapter/: __init__.py  barrier_function_adapter.py  beta_barrier_function_adapter.py  crabs_adapter.py  decisiondiffuser_adapter.py  decisiondiffuser_adpater.py  early_terminated_adapter.py  modelbased_adapter.py  offline_adapter.py  offpolicy_adapter.py  offpolicy_barrier_function_adapter.py  offpolicy_latent_adapter.py  online_adapter.py  onpolicy_adapter.py  robust_barrier_function_adapter.py  saute_adapter.py  simmer_adapter.py
omnisafe/algorithms/: __init__.py  algo_wrapper.py  base_algo.py  env_wrapper.py  registry.py
omnisafe/algos/: __init__.py  env_wrapper.py  registry.py
omnisafe/common/: __init__.py  barrier_comp.py  barrier_solver.py  base_buffer.py  buffer.py  experiment_grid.py  gp_model.py  lagrange.py  latent.py  logger.py  normalize.py  normalizer.py  pid_lagrange.py  record_queue.py  replay_buffer.py  robust_barrier_solver.py  robust_gp_model.py  simmer_agent.py  statistics_tools.py  utils.py  vector_buffer.py
omnisafe/envs/: __init__.py  barrier_function_env.py  cbf_env.py  collect_dataset.py  core.py  crabs_env.py  custom_env.py  discrete_env.py  legacy_env.py  meta_drive_env.py  mujoco_env.py  rcbf_env.py  robust_barrier_function_env.py  safety_drawcircle.py  safety_gymnasium_env.py  safety_gymnasium_modelbased.py  safety_gymnasium_vision_env.py  safety_isaac_gym_env.py  test_pygame.py  unicycle_env.py  wrapper.py
omnisafe/models/: __init__.py  actor_critic.py  actor_q_critic.py  base.py  constraint_actor_critic.py  constraint_actor_q_critic.py  constraint_q_actor_critic.py
omnisafe/utils/: __init__.py  algo_utils.py  command_app.py  config.py  config_utils.py  core.py  distributed.py  distributed_utils.py  ema.py  exp_grid_tools.py  isaac_gym.py  isaac_gym_utils.py  logger_utils.py  math.py  model.py  model_utils.py  online_mean_std.py  plotter.py  schedule.py  tools.py  vtrace.py
omnisafe/wrappers/: __init__.py  cmdp_wrapper.py  early_terminated_wrapper.py  env_wrapper.py  model_based_wrapper.py  off_policy_wrapper.py  on_policy_wrapper.py  saute_wrapper.py  simmer_wrapper.py  wrapper_registry.py
scripts/: evaluate_inv_parallel.py  train.py
tests/: .coveragerc  distribution_train.py  helpers.py  requirements.txt  simple_env.py  test_buffer.py  test_cli.py  test_ensemble.py  test_env.py  test_examples.py  test_experiment_grid.py  test_logger.py  test_model.py  test_model_based.py  test_normalizer.py  test_offline_data.py  test_on_policy.py  test_policy.py  test_registry.py  test_safety_gym_envs.py  test_statistics_tools.py  test_utils.py
tests/saved_source/: Simple-v0.npz  benchmark_config.yaml  train_config.yaml
tutorials/: README.md  requirements.txt
tutorials/English/: 1.Getting_Started.ipynb  2.CLI_Command.ipynb  3.Environment Customization from Scratch.ipynb  3.Environment Customization from Zero.ipynb  4.Environment Customization from Community.ipynb
tutorials/zh-cn/: 1.Getting Started.ipynb  2.CLI Command.ipynb  3.Environment Customization from Scratch.ipynb  3.Environment Customization from Zero.ipynb  3.Environment Customization.ipynb  4.Environment Customization from Community.ipynb  4.Gymnasium Customization.ipynb
tutorials/简体中文/: 1.Getting Started.ipynb  2.CLI Command.ipynb
(+717 files in other folders)
